--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body,td,th {
   <tr>
     <td width="88" bgcolor="#CC3300"><div align="center"><span class="style4">Home</span></div></td>
     <td width="181" bgcolor="#CC3300"><div align="center"><span class="style4">Shopping Guide </span></div></td>
-    <td width="119" bgcolor="#CC3300"><div align="center"><span class="style8"><a href="Catalog.html" class="style8">Catalog</a></span></div></td>
+    <td width="119" bgcolor="#CC3300"><div align="center"><span class="style8"><a href="catalog.html" class="style8">Catalog</a></span></div></td>
   </tr>
 </table>
 <p>&nbsp;</p>
